Prevent playlist info elements from going offscreen on sidebar open.

--- a/src/styles/_playback_bar.styl
+++ b/src/styles/_playback_bar.styl
@@ -59,6 +59,7 @@
       right 0
       bottom 0
       left $playbackBarCoverWidth
+      cursor pointer
       .waveform
         width 100%
         height 100%
